Refactor navigation links to replace 'Audit' with 'Analytics' across multiple HTML files and create new analytics page with initial setup.

--- a/employee-dashboard.html
+++ b/employee-dashboard.html
@@ -43,7 +43,7 @@
 
       <a href="settings.html" data-role="admin">Settings</a>
       <a href="settings-employee.html" data-role="employee">Settings</a>
-      <a href="item-history.html" data-role="admin">Audit</a>
+      <a href="analytics.html" data-role="admin">Analytics</a>
         <a href="support.html">Support</a>
 
     </nav>
