--- a/support.html
+++ b/support.html
@@ -31,7 +31,7 @@
         <a href="field-purchase.html">Field Purchases</a>
         <a href="settings.html" data-role="admin">Settings</a>
         <a href="settings-employee.html" data-role="employee">Settings</a>
-        <a href="item-history.html" data-role="admin">Audit</a>
+        <a href="analytics.html" data-role="admin">Analytics</a>
         <a class="active" href="support.html">Support</a>
       </nav>
     </aside>
