refactor: update branding from Mercato Tech to Modulr across multiple HTML files

--- a/analytics.html
+++ b/analytics.html
@@ -10,7 +10,7 @@
   <div class="app">
     <aside class="sidebar">
       <div>
-        <div class="brand">Inventory Management System</div>
+        <div class="brand">Inventory Management System by Modulr</div>
         <div class="subtitle">Navigation</div>
         <div class="user-chip">
           <div class="avatar">US</div>
@@ -95,3 +95,4 @@
   <script>document.addEventListener('DOMContentLoaded',()=>{if(window.utils){utils.wrapFetchWithRole?.();utils.applyStoredTheme?.();utils.applyNavVisibility?.();utils.setupLogout?.();}});</script>
 </body>
 </html>
+
