--- a/inventory-operations.html
+++ b/inventory-operations.html
@@ -29,7 +29,7 @@
   <div class="app">
     <aside class="sidebar">
       <div>
-        <div class="brand">Inventory Management System</div>
+        <div class="brand">Inventory Management System by Modulr</div>
         <div class="subtitle">Navigation</div>
         <div class="user-chip">
           <div class="avatar">US</div>
@@ -295,6 +295,7 @@
   <script src="js/operations.js"></script>
 </body>
 </html>
+
 
 
 
