--- a/support.html
+++ b/support.html
@@ -10,7 +10,7 @@
   <div class="app">
     <aside class="sidebar">
       <div>
-        <div class="brand">Inventory Management System</div>
+        <div class="brand">Inventory Management System by Modulr</div>
         <div class="subtitle">Navigation</div>
         <div class="user-chip">
           <div class="avatar">US</div>
@@ -97,4 +97,5 @@
   </script>
 </body>
 </html>
+
 
