--- a/contact.html
+++ b/contact.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Contact Mercato Tech | Talk to the ops team</title>
-  <meta name="description" content="Contact Mercato Tech to request a demo, ask about pricing, or discuss security and onboarding." />
+  <title>Contact Modulr | Talk to the ops team</title>
+  <meta name="description" content="Contact Modulr to request a demo, ask about pricing, or discuss security and onboarding." />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@500;600;700&family=Sora:wght@400;500;600;700&display=swap" rel="stylesheet" />
@@ -15,7 +15,7 @@
     <div class="container header-inner">
       <a class="logo" href="index.html">
         <span class="logo-mark">MT</span>
-        <div class="logo-text">Mercato Tech<span>Industrial inventory</span></div>
+        <div class="logo-text">Modulr<span>Industrial inventory</span></div>
       </a>
       <nav class="site-nav" id="site-nav">
         <a href="index.html">Home</a>
@@ -36,7 +36,7 @@
       <div class="container hero-grid">
         <div class="fade-up">
           <p class="pill">Signal our team</p>
-          <h1>Wire Mercato Tech into your workflow.</h1>
+          <h1>Wire Modulr into your workflow.</h1>
           <p>Tell us about your inventory setup and we will recommend the best plan, rollout, and integration path.</p>
           <div class="hero-actions">
             <a class="btn btn-primary" href="#contact-form">Request a demo</a>
@@ -116,7 +116,7 @@
       <div>
         <div class="logo" style="margin-bottom:10px;">
           <span class="logo-mark">MT</span>
-          <div class="logo-text">Mercato Tech<span>Industrial inventory</span></div>
+          <div class="logo-text">Modulr<span>Industrial inventory</span></div>
         </div>
         <p class="muted">Industrial inventory command for operations leaders and field teams.</p>
       </div>
@@ -144,3 +144,4 @@
   <script src="js/marketing.js"></script>
 </body>
 </html>
+
