--- a/dashboard.html
+++ b/dashboard.html
@@ -12,7 +12,7 @@
   <div class="app">
     <aside class="sidebar">
       <div>
-        <div class="brand">Inventory Management System</div>
+        <div class="brand">Inventory Management System by Modulr</div>
         <div class="subtitle">Navigation</div>
         <div class="user-chip">
           <div class="avatar">US</div>
@@ -132,6 +132,7 @@
   <script src="js/dashboard.js"></script>
 </body>
 </html>
+
 
 
 
