--- a/features.html
+++ b/features.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Mercato Tech Features | Industrial ops modules</title>
-  <meta name="description" content="Explore Mercato Tech modules for procurement, allocation, audit trails, and field checkouts. Built for industrial operations teams." />
+  <title>Modulr Features | Industrial ops modules</title>
+  <meta name="description" content="Explore Modulr modules for procurement, allocation, audit trails, and field checkouts. Built for industrial operations teams." />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@500;600;700&family=Sora:wght@400;500;600;700&display=swap" rel="stylesheet" />
@@ -15,7 +15,7 @@
     <div class="container header-inner">
       <a class="logo" href="index.html">
         <span class="logo-mark">MT</span>
-        <div class="logo-text">Mercato Tech<span>Industrial inventory</span></div>
+        <div class="logo-text">Modulr<span>Industrial inventory</span></div>
       </a>
       <nav class="site-nav" id="site-nav">
         <a href="index.html">Home</a>
@@ -37,7 +37,7 @@
         <div class="fade-up">
           <p class="pill">Ops modules</p>
           <h1>Industrial workflows, tuned for speed.</h1>
-          <p>Mercato Tech powers procurement, allocation, and audit-ready tracking in a single industrial control stack.</p>
+          <p>Modulr powers procurement, allocation, and audit-ready tracking in a single industrial control stack.</p>
           <div class="hero-actions">
             <a class="btn btn-primary" href="contact.html">Request a demo</a>
             <a class="btn btn-secondary" href="pricing.html">Compare plans</a>
@@ -133,7 +133,7 @@
         <div class="cta-strip fade-up">
           <div>
             <h2>Want a live ops walkthrough?</h2>
-            <p>We will map Mercato Tech to your current process in one call.</p>
+            <p>We will map Modulr to your current process in one call.</p>
           </div>
           <div style="display:flex;gap:12px;flex-wrap:wrap;justify-content:flex-end;">
             <a class="btn btn-secondary" href="contact.html">Contact sales</a>
@@ -149,7 +149,7 @@
       <div>
         <div class="logo" style="margin-bottom:10px;">
           <span class="logo-mark">MT</span>
-          <div class="logo-text">Mercato Tech<span>Industrial inventory</span></div>
+          <div class="logo-text">Modulr<span>Industrial inventory</span></div>
         </div>
         <p class="muted">Industrial inventory command for operations leaders and field teams.</p>
       </div>
@@ -177,3 +177,4 @@
   <script src="js/marketing.js"></script>
 </body>
 </html>
+
