--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Mercato Tech | Inventory command for modern ops</title>
-  <meta name="description" content="Mercato Tech is an inventory command center for procurement, allocation, and field teams. Real-time stock, audit-ready trails, and rapid deployment." />
+  <title>Modulr | Inventory command for modern ops</title>
+  <meta name="description" content="Modulr is an inventory command center for procurement, allocation, and field teams. Real-time stock, audit-ready trails, and rapid deployment." />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@500;600;700&family=Sora:wght@400;500;600;700&display=swap" rel="stylesheet" />
@@ -15,7 +15,7 @@
     <div class="container header-inner">
       <a class="logo" href="index.html">
         <span class="logo-mark">MT</span>
-        <div class="logo-text">Mercato Tech<span>Inventory</span></div>
+        <div class="logo-text">Modulr<span>Inventory</span></div>
       </a>
       <nav class="site-nav" id="site-nav">
         <a class="active" href="index.html">Home</a>
@@ -37,7 +37,7 @@
         <div class="fade-up">
           <p class="pill">Ops OS</p>
           <h1>Command-grade inventory for service crews.</h1>
-          <p>Mercato Tech syncs procurement, allocation, and field checkouts into one real-time ops console. Cut downtime, track every move, and stay audit ready.</p>
+          <p>Modulr syncs procurement, allocation, and field checkouts into one real-time ops console. Cut downtime, track every move, and stay audit ready.</p>
           <div class="hero-actions">
             <a class="btn btn-primary" href="contact.html">Request a demo</a>
             <a class="btn btn-secondary" href="pricing.html">See pricing</a>
@@ -209,7 +209,7 @@
       <div class="container">
         <div class="cta-strip fade-up">
           <div>
-            <h2>Ready to run Mercato Tech?</h2>
+            <h2>Ready to run Modulr?</h2>
             <p>Book a walkthrough and get a tailored rollout plan.</p>
           </div>
           <div style="display:flex;gap:12px;flex-wrap:wrap;justify-content:flex-end;">
@@ -226,7 +226,7 @@
       <div>
         <div class="logo" style="margin-bottom:10px;">
           <span class="logo-mark">MT</span>
-          <div class="logo-text">Mercato Tech<span>Industrial inventory</span></div>
+          <div class="logo-text">Modulr<span>Industrial inventory</span></div>
         </div>
         <p class="muted">Industrial inventory command for operations leaders and field teams.</p>
       </div>
@@ -254,3 +254,4 @@
   <script src="js/marketing.js"></script>
 </body>
 </html>
+
