--- a/pricing.html
+++ b/pricing.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Mercato Tech Pricing | Industrial ops plans</title>
-  <meta name="description" content="Simple, transparent pricing for Mercato Tech. Industrial teams choose a plan and scale with confidence." />
+  <title>Modulr Pricing | Industrial ops plans</title>
+  <meta name="description" content="Simple, transparent pricing for Modulr. Industrial teams choose a plan and scale with confidence." />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@500;600;700&family=Sora:wght@400;500;600;700&display=swap" rel="stylesheet" />
@@ -15,7 +15,7 @@
     <div class="container header-inner">
       <a class="logo" href="index.html">
         <span class="logo-mark">MT</span>
-        <div class="logo-text">Mercato Tech<span>Industrial inventory</span></div>
+        <div class="logo-text">Modulr<span>Industrial inventory</span></div>
       </a>
       <nav class="site-nav" id="site-nav">
         <a href="index.html">Home</a>
@@ -140,7 +140,7 @@
       <div>
         <div class="logo" style="margin-bottom:10px;">
           <span class="logo-mark">MT</span>
-          <div class="logo-text">Mercato Tech<span>Industrial inventory</span></div>
+          <div class="logo-text">Modulr<span>Industrial inventory</span></div>
         </div>
         <p class="muted">Industrial inventory command for operations leaders and field teams.</p>
       </div>
@@ -168,3 +168,4 @@
   <script src="js/marketing.js"></script>
 </body>
 </html>
+
