--- a/security.html
+++ b/security.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Mercato Tech Security | Industrial-grade protection</title>
-  <meta name="description" content="Security and compliance details for Mercato Tech. Role-based access, audit logs, encryption, and tenant isolation by default." />
+  <title>Modulr Security | Industrial-grade protection</title>
+  <meta name="description" content="Security and compliance details for Modulr. Role-based access, audit logs, encryption, and tenant isolation by default." />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@500;600;700&family=Sora:wght@400;500;600;700&display=swap" rel="stylesheet" />
@@ -15,7 +15,7 @@
     <div class="container header-inner">
       <a class="logo" href="index.html">
         <span class="logo-mark">MT</span>
-        <div class="logo-text">Mercato Tech<span>Industrial inventory</span></div>
+        <div class="logo-text">Modulr<span>Industrial inventory</span></div>
       </a>
       <nav class="site-nav" id="site-nav">
         <a href="index.html">Home</a>
@@ -37,7 +37,7 @@
         <div class="fade-up">
           <p class="pill">Security core</p>
           <h1>Industrial-grade protection, from day one.</h1>
-          <p>Mercato Tech protects your data with strong access controls, encryption, and audit trails designed for industrial teams.</p>
+          <p>Modulr protects your data with strong access controls, encryption, and audit trails designed for industrial teams.</p>
           <div class="hero-actions">
             <a class="btn btn-primary" href="contact.html">Request security brief</a>
             <a class="btn btn-secondary" href="features.html">View features</a>
@@ -122,7 +122,7 @@
       <div>
         <div class="logo" style="margin-bottom:10px;">
           <span class="logo-mark">MT</span>
-          <div class="logo-text">Mercato Tech<span>Industrial inventory</span></div>
+          <div class="logo-text">Modulr<span>Industrial inventory</span></div>
         </div>
         <p class="muted">Industrial inventory command for operations leaders and field teams.</p>
       </div>
@@ -150,3 +150,4 @@
   <script src="js/marketing.js"></script>
 </body>
 </html>
+
