--- a/seller-admin.html
+++ b/seller-admin.html
@@ -10,7 +10,7 @@
   <div class="app">
     <aside class="sidebar">
       <div>
-        <div class="brand">Inventory Management System</div>
+        <div class="brand">Inventory Management System by Modulr</div>
         <div class="subtitle">Navigation</div>
         <div class="user-chip">
           <div class="avatar">US</div>
@@ -293,5 +293,6 @@
   </script>
 </body>
 </html>
+
 
 
