refactor: update branding text in multiple HTML files

--- a/employee-dashboard.html
+++ b/employee-dashboard.html
@@ -20,8 +20,8 @@
   <div class="app">
     <aside class="sidebar">
       <div>
-        <div class="brand">Inventory Management System by Modulr</div>
-        <div class="subtitle">Navigation</div>
+        <div class="brand">Inventory Management System</div>
+        <div class="subtitle">by Modulr</div>
         <div class="user-chip">
           <div class="avatar">US</div>
           <div>
@@ -199,6 +199,7 @@
   </script>
 </body>
 </html>
+
 
 
 
