--- a/job-creator.html
+++ b/job-creator.html
@@ -10,8 +10,8 @@
   <div class="app">
     <aside class="sidebar">
       <div>
-        <div class="brand">Inventory Management System by Modulr</div>
-        <div class="subtitle">Navigation</div>
+        <div class="brand">Inventory Management System</div>
+        <div class="subtitle">by Modulr</div>
         <div class="user-chip">
           <div class="avatar">US</div>
           <div>
@@ -196,6 +196,7 @@
   <script>document.addEventListener('DOMContentLoaded',()=>{if(window.utils){utils.wrapFetchWithRole?.();utils.applyStoredTheme?.();utils.applyNavVisibility?.();utils.setupLogout?.();}});</script>
 </body>
 </html>
+
 
 
 
