--- a/settings-employee.html
+++ b/settings-employee.html
@@ -10,8 +10,8 @@
   <div class="app">
         <aside class="sidebar">
       <div>
-        <div class="brand">Inventory Management System by Modulr</div>
-        <div class="subtitle">Navigation</div>
+        <div class="brand">Inventory Management System</div>
+        <div class="subtitle">by Modulr</div>
         <div class="user-chip">
           <div class="avatar">US</div>
           <div>
@@ -153,6 +153,7 @@
   <script src="js/settings-employee.js"></script>
 </body>
 </html>
+
 
 
 
