--- a/field-purchase.html
+++ b/field-purchase.html
@@ -12,8 +12,8 @@
   <div class="app">
     <aside class="sidebar">
       <div>
-        <div class="brand">Inventory Management System by Modulr</div>
-        <div class="subtitle">Navigation</div>
+        <div class="brand">Inventory Management System</div>
+        <div class="subtitle">by Modulr</div>
         <div class="user-chip">
           <div class="avatar">US</div>
           <div>
@@ -105,6 +105,7 @@
   <script src="js/field-purchase.js"></script>
 </body>
 </html>
+
 
 
 
