--- a/order-register.html
+++ b/order-register.html
@@ -10,8 +10,8 @@
   <div class="app">
         <aside class="sidebar">
       <div>
-        <div class="brand">Inventory Management System by Modulr</div>
-        <div class="subtitle">Navigation</div>
+        <div class="brand">Inventory Management System</div>
+        <div class="subtitle">by Modulr</div>
         <div class="user-chip">
           <div class="avatar">US</div>
           <div>
@@ -275,6 +275,7 @@
   <script>document.addEventListener('DOMContentLoaded',()=>{if(window.utils){utils.wrapFetchWithRole?.();utils.applyStoredTheme?.();utils.applyNavVisibility?.();utils.setupLogout?.();}});</script>
 </body>
 </html>
+
 
 
 
