refactor: update navigation links and titles for consistency across multiple HTML files

--- a/support.html
+++ b/support.html
@@ -20,18 +20,18 @@
           </div>
         </div>
       </div>
-      <nav>
-        <a href="dashboard.html" data-role="admin">Admin Dashboard</a>
+                  <nav>
+        <a href="dashboard.html" data-role="admin">Dashboard</a>
         <a href="employee-dashboard.html" data-role="employee">Dashboard</a>
         <a href="inventory-operations.html">Operations</a>
+        <a href="field-purchase.html">Field Purchases</a>
         <a href="inventory-list.html">Inventory</a>
         <a href="item-master.html" data-role="admin">Item Master</a>
         <a href="job-creator.html" data-role="admin">Project Manager</a>
         <a href="order-register.html" data-role="admin">Procurement &amp; Allocation</a>
-        <a href="field-purchase.html">Field Purchases</a>
+        <a href="analytics.html" data-role="admin">Analytics</a>
         <a href="settings.html" data-role="admin">Settings</a>
         <a href="settings-employee.html" data-role="employee">Settings</a>
-        <a href="analytics.html" data-role="admin">Analytics</a>
         <a class="active" href="support.html">Support</a>
       </nav>
     </aside>
