--- a/dashboard.html
+++ b/dashboard.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no" />
-  <title>Admin Dashboard</title>
+  <title>Dashboard</title>
   <meta name="theme-color" content="#0f172a" />
   <link rel="manifest" href="manifest.json" />
   <link rel="stylesheet" href="css/style.css" />
@@ -23,26 +23,24 @@
           </div>
         </div>
       </div>
-      <nav>
-        <a class="active" href="dashboard.html" data-role="admin">Admin Dashboard</a>
+                  <nav>
+        <a class="active" href="dashboard.html" data-role="admin">Dashboard</a>
         <a  href="employee-dashboard.html" data-role="employee">Dashboard</a>
         <a href="inventory-operations.html">Operations</a>
+        <a href="field-purchase.html" >Field Purchases</a>
         <a href="inventory-list.html">Inventory</a>
         <a href="item-master.html" data-role="admin">Item Master</a>
         <a href="job-creator.html" data-role="admin">Project Manager</a>
         <a href="order-register.html" data-role="admin">Procurement &amp; Allocation</a>
-        <a href="field-purchase.html" >Field Purchases</a>
-
+        <a href="analytics.html" data-role="admin">Analytics</a>
         <a href="settings.html" data-role="admin">Settings</a>
         <a href="settings-employee.html" data-role="employee">Settings</a>
-        <a href="analytics.html" data-role="admin">Analytics</a>
         <a href="support.html">Support</a>
-
       </nav>
     </aside>
     <main class="main">
       <header class="topbar">
-        <h1>Admin Dashboard</h1>
+        <h1>Dashboard</h1>
         <div class="topbar-right">
           <div class="clock-pill"><span class="clock-label">Now</span><span id="clock" class="clock-value"></span></div>
           <button id="logoutBtn" class="muted">Logout</button>
