--- a/employee-dashboard.html
+++ b/employee-dashboard.html
@@ -31,22 +31,20 @@
           </div>
         </div>
       </div>
-      <nav>
-        <a  href="dashboard.html" data-role="admin">Admin Dashboard</a>
-      <a class="active" href="employee-dashboard.html" data-role="employee">Dashboard</a>
-      <a href="inventory-operations.html">Operations</a>
-      <a href="inventory-list.html">Inventory</a>
-      <a href="item-master.html" data-role="admin">Item Master</a>
-        <a href="job-creator.html" data-role="admin">Project Manager</a>
-      <a href="order-register.html" data-role="admin">Procurement &amp; Allocation</a>
+                  <nav>
+        <a  href="dashboard.html" data-role="admin">Dashboard</a>
+        <a class="active" href="employee-dashboard.html" data-role="employee">Dashboard</a>
+        <a href="inventory-operations.html">Operations</a>
         <a href="field-purchase.html" >Field Purchases</a>
-
-      <a href="settings.html" data-role="admin">Settings</a>
-      <a href="settings-employee.html" data-role="employee">Settings</a>
-      <a href="analytics.html" data-role="admin">Analytics</a>
+        <a href="inventory-list.html">Inventory</a>
+        <a href="item-master.html" data-role="admin">Item Master</a>
+        <a href="job-creator.html" data-role="admin">Project Manager</a>
+        <a href="order-register.html" data-role="admin">Procurement &amp; Allocation</a>
+        <a href="analytics.html" data-role="admin">Analytics</a>
+        <a href="settings.html" data-role="admin">Settings</a>
+        <a href="settings-employee.html" data-role="employee">Settings</a>
         <a href="support.html">Support</a>
-
-    </nav>
+      </nav>
     </aside>
     <main class="main">
       <header class="topbar">
