Update theme colors and styles across multiple HTML files

--- a/employee-dashboard.html
+++ b/employee-dashboard.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no" />
   <title>Dashboard</title>
-  <meta name="theme-color" content="#0f172a" />
+  <meta name="theme-color" content="#132a24" />
   <link rel="manifest" href="manifest.json" />
   <link rel="stylesheet" href="css/style.css" />
   <style>
@@ -55,14 +55,14 @@
         </div>
       </header>
 
-      <section class="card" style="background:linear-gradient(135deg,#0a1b2b,#0f7a57);color:#fff;box-shadow:0 14px 36px rgba(10,27,43,0.25);">
+      <section class="card" style="background:linear-gradient(135deg,#132a24,#1f6f5c);color:#fff;box-shadow:0 14px 36px rgba(24,36,32,0.25);">
         <div style="display:flex;justify-content:space-between;align-items:center;flex-wrap:wrap;gap:10px;">
           <div>
             <h3 style="color:rgba(255,255,255,0.85);margin-bottom:6px;">Go to your tasks</h3>
             <div style="font-size:0.95rem;opacity:0.85;">Jump straight into your daily workflows.</div>
           </div>
           <div style="display:flex;gap:8px;">
-            <a href="inventory-operations.html?mode=checkout" class="task-btn" style="background:#fff;color:#0a1b2b;box-shadow:0 10px 22px rgba(255,255,255,0.2);">Receive / Pick</a>
+            <a href="inventory-operations.html?mode=checkout" class="task-btn" style="background:#fff;color:#132a24;box-shadow:0 10px 22px rgba(255,255,255,0.2);">Receive / Pick</a>
             <a href="inventory-list.html" class="task-btn" style="background:rgba(255,255,255,0.14);color:#fff;border:1px solid rgba(255,255,255,0.25);">Check Stock</a>
             <a href="job-creator.html#report" class="task-btn" style="background:rgba(255,255,255,0.14);color:#fff;border:1px solid rgba(255,255,255,0.25);">Project Activity</a>
             <a href="field-purchase.html" class="task-btn" style="background:rgba(255,255,255,0.14);color:#fff;border:1px solid rgba(255,255,255,0.25);">Field Purchases</a>
