--- a/tenant-create.html
+++ b/tenant-create.html
@@ -6,23 +6,23 @@
   <title>Create Business</title>
   <link rel="stylesheet" href="css/style.css" />
   <style>
-    body{margin:0;font-family:system-ui,-apple-system,Segoe UI,Roboto,"Helvetica Neue",Arial;}
-    .auth-wrapper{display:flex;align-items:center;justify-content:center;min-height:100vh;background:linear-gradient(135deg,#0a1b2b 0%,#0f7a57 100%);padding:20px;}
-    .auth-card{background:#0c1624;color:#e5e7eb;padding:28px;border-radius:16px;box-shadow:0 20px 60px rgba(0,0,0,0.35);width:100%;max-width:440px;border:1px solid rgba(255,255,255,0.08);}
+    body{margin:0;font-family:var(--font-body);background:var(--bg);color:var(--ink);}
+    .auth-wrapper{display:flex;align-items:center;justify-content:center;min-height:100vh;background:transparent;padding:20px;position:relative;z-index:1;}
+    .auth-card{background:var(--card);color:var(--ink);padding:28px;border-radius:16px;box-shadow:0 20px 60px rgba(24,36,32,0.2);width:100%;max-width:440px;border:1px solid var(--line);}
     .auth-card h1{margin-top:0;margin-bottom:10px;font-weight:800;letter-spacing:0.3px;}
     .auth-card .inventory-form{gap:14px;}
-    .hint{color:#cbd5f5;font-size:0.95rem;margin-bottom:14px;line-height:1.45;}
-    label{color:#cbd5f5;}
-    input{background:#0f172a;color:#e5e7eb;border:1px solid #1f2937;}
-    button{background:linear-gradient(135deg,#0f7a57,#14a26d);border:none;color:#fff;font-weight:800;box-shadow:0 10px 30px rgba(20,162,109,0.35);}
-    .auth-card a{color:#8be0c4;font-weight:700;text-decoration:none;}
+    .hint{color:var(--muted);font-size:0.95rem;margin-bottom:14px;line-height:1.45;}
+    label{color:var(--muted);}
+    input{background:#fff;color:var(--ink);border:1px solid var(--line);}
+    button{background:linear-gradient(135deg,#1f6f5c,#2b8a71);border:none;color:#fff;font-weight:800;box-shadow:0 10px 30px rgba(31,111,92,0.35);}
+    .auth-card a{color:var(--accent);font-weight:700;text-decoration:none;}
   </style>
 </head>
 <body>
   <div class="auth-wrapper">
     <div class="auth-card">
       <h1>Create Your Business</h1>
-      <p class="hint">Set a unique business code and your admin account. You’ll use this code on the login screen.</p>
+      <p class="hint">Set a unique business code and your admin account. You'll use this code on the login screen.</p>
       <form id="tenantForm" class="inventory-form" autocomplete="off">
         <div class="form-row">
           <label>Business Name<input id="tenant-name" required autocomplete="off"></label>
@@ -43,7 +43,7 @@
           <button type="submit">Create Business</button>
         </div>
         <div id="tenant-error" style="color:#b91c1c;font-size:0.9rem;margin-top:4px;"></div>
-        <div style="font-size:0.9rem;color:#6b7280;">Already have one? <a href="login.html">Log in</a></div>
+        <div style="font-size:0.9rem;color:var(--muted);">Already have one? <a href="login.html">Log in</a></div>
       </form>
     </div>
   </div>
