enhance login page styling with background gradients and overlays

--- a/login.html
+++ b/login.html
@@ -6,7 +6,26 @@
   <title>Login</title>
   <link rel="stylesheet" href="css/style.css" />
   <style>
-    body{margin:0;font-family:var(--font-body);background:var(--bg);color:var(--ink);}
+    body{margin:0;font-family:var(--font-body);background:linear-gradient(135deg,#0f332c 0%,#1f6f5c 100%);color:var(--ink);}
+    body::before{
+      content:"";
+      position:fixed;
+      inset:-20% -10%;
+      background-image:
+        repeating-linear-gradient(135deg, rgba(255,255,255,0.08) 0 2px, transparent 2px 26px),
+        repeating-radial-gradient(circle at 18% 20%, rgba(255,255,255,0.1) 0 1px, transparent 1px 22px);
+      opacity:0.35;
+      pointer-events:none;
+      z-index:0;
+    }
+    body::after{
+      content:"";
+      position:fixed;
+      inset:0;
+      background:radial-gradient(circle at top right, rgba(255,255,255,0.12), transparent 55%);
+      pointer-events:none;
+      z-index:0;
+    }
     .auth-wrapper{display:flex;align-items:center;justify-content:center;min-height:100vh;padding:20px;position:relative;z-index:1;}
     .auth-card{background:var(--card);color:var(--ink);padding:28px;border-radius:16px;box-shadow:0 20px 60px rgba(24,36,32,0.2);width:100%;max-width:420px;border:1px solid var(--line);}
     .auth-card h1{margin-top:0;margin-bottom:10px;font-weight:800;letter-spacing:0.3px;}
