enhance dark mode styles for mode tabs and metrics

--- a/inventory-operations.html
+++ b/inventory-operations.html
@@ -22,6 +22,10 @@
     .ops-metric .value{font-size:20px;font-weight:800;color:#1f6f5c;margin-top:4px;}
     .ops-list{margin:0;padding-left:18px;color:var(--muted);font-size:14px;line-height:1.5;}
     .ops-list li{margin-bottom:6px;}
+    .dark .mode-tabs button{background:#16221f;color:var(--ink);border-color:#22312d;}
+    .dark .mode-tabs button.active{background:linear-gradient(135deg,#0b2b26,#1f6f5c);border-color:rgba(124,225,196,0.4);}
+    .dark .ops-metric{background:#16221f;border-color:#22312d;box-shadow:0 8px 20px rgba(0,0,0,0.35);}
+    .dark .ops-metric .label{color:var(--muted);}
     @media(max-width:900px){.ops-hero{grid-template-columns:1fr}}
   </style>
 </head>
