update color variables and improve button styles for consistency across CSS files

--- a/register.html
+++ b/register.html
@@ -11,7 +11,7 @@
     .auth-card h1{margin-top:0;margin-bottom:12px;}
     .auth-card .inventory-form{gap:12px;}
     .tab-toggle{display:flex;gap:8px;margin-bottom:12px;}
-    .tab-toggle button{flex:1;padding:10px;border:1px solid var(--line);background:#f7f1e8;border-radius:10px;font-weight:700;cursor:pointer;}
+    .tab-toggle button{flex:1;padding:10px;border:1px solid var(--line);background:var(--surface-2);border-radius:10px;font-weight:700;cursor:pointer;}
     .tab-toggle button.active{background:linear-gradient(135deg,#132a24,#1f6f5c);color:#fff;border-color:rgba(31,111,92,0.4);box-shadow:0 8px 20px rgba(31,111,92,0.25);}
     .admin-note{font-size:0.9rem;color:#b91c1c;background:#fff5f5;padding:8px;border-radius:8px;border:1px solid #fecdd3;}
   </style>
