--- a/inventory-operations.html
+++ b/inventory-operations.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="css/style.css" />
   <style>
     .mode-tabs {display:flex;gap:10px;flex-wrap:wrap;margin-bottom:16px;}
-    .mode-tabs button {padding:12px 16px;border-radius:999px;border:1px solid #dccfbf;background:#f7f1e8;color:#1b2522;font-weight:700;cursor:pointer;transition:all .2s;}
+    .mode-tabs button {padding:12px 16px;border-radius:999px;border:1px solid var(--line);background:var(--surface-2);color:var(--ink);font-weight:700;cursor:pointer;transition:all .2s;}
     .mode-tabs button.active {background:linear-gradient(135deg,#132a24,#1f6f5c);color:#fff;border-color:rgba(31,111,92,0.4);box-shadow:0 10px 24px rgba(24,36,32,0.18);}
     .mode-tabs button:hover {transform:translateY(-1px);box-shadow:0 8px 18px rgba(0,0,0,0.1);}
     .mode-content {display:none;}
@@ -17,7 +17,7 @@
     .ops-hero {display:grid;grid-template-columns:1.6fr 1fr;gap:12px;margin-bottom:16px;}
     .ops-hero .card{margin:0;}
     .ops-metrics{display:grid;grid-template-columns:repeat(auto-fit,minmax(140px,1fr));gap:10px;}
-    .ops-metric{padding:12px;border-radius:12px;border:1px solid #dccfbf;background:#faf6ef;box-shadow:0 8px 20px rgba(24,36,32,0.08);}
+    .ops-metric{padding:12px;border-radius:12px;border:1px solid var(--line);background:var(--surface-2);box-shadow:0 8px 20px rgba(24,36,32,0.08);}
     .ops-metric .label{color:var(--muted);font-size:12px;font-weight:700;letter-spacing:0.3px;text-transform:uppercase;}
     .ops-metric .value{font-size:20px;font-weight:800;color:#1f6f5c;margin-top:4px;}
     .ops-list{margin:0;padding-left:18px;color:var(--muted);font-size:14px;line-height:1.5;}
