--- a/security.html
+++ b/security.html
@@ -25,7 +25,7 @@
         <a href="contact.html">Contact</a>
       </nav>
       <div class="header-actions">
-        <a class="btn btn-primary app-cta" data-app-link href="login.html">Go to App</a>
+        <a class="btn btn-primary app-cta" data-app-link href="/app/login.html">Go to App</a>
         <button class="nav-toggle" type="button" aria-expanded="false" aria-controls="site-nav">Menu</button>
       </div>
     </div>
@@ -214,7 +214,7 @@
           </div>
           <div style="display:flex;gap:12px;flex-wrap:wrap;justify-content:flex-end;">
             <a class="btn btn-secondary" href="contact.html">Talk to sales</a>
-            <a class="btn btn-primary" data-app-link href="login.html">Go to App</a>
+            <a class="btn btn-primary" data-app-link href="/app/login.html">Go to App</a>
           </div>
         </div>
       </div>
@@ -240,7 +240,7 @@
         <strong>Company</strong>
         <a href="contact.html">Contact</a>
         <a href="contact.html">Request a demo</a>
-        <a data-app-link href="login.html">Go to App</a>
+        <a data-app-link href="/app/login.html">Go to App</a>
       </div>
       <div class="footer-links">
         <strong>Contact</strong>
@@ -282,7 +282,7 @@
         <a href="contact.html">Contact</a>
       </nav>
       <div class="header-actions">
-        <a class="btn btn-primary app-cta" data-app-link href="login.html">Go to App</a>
+        <a class="btn btn-primary app-cta" data-app-link href="/app/login.html">Go to App</a>
         <button class="nav-toggle" type="button" aria-expanded="false" aria-controls="site-nav">Menu</button>
       </div>
     </div>
@@ -394,7 +394,7 @@
           </div>
           <div style="display:flex;gap:12px;flex-wrap:wrap;justify-content:flex-end;">
             <a class="btn btn-secondary" href="contact.html">Contact sales</a>
-            <a class="btn btn-primary" data-app-link href="login.html">Go to App</a>
+            <a class="btn btn-primary" data-app-link href="/app/login.html">Go to App</a>
           </div>
         </div>
       </div>
@@ -420,7 +420,7 @@
         <strong>Company</strong>
         <a href="contact.html">Contact</a>
         <a href="contact.html">Request a demo</a>
-        <a data-app-link href="login.html">Go to App</a>
+        <a data-app-link href="/app/login.html">Go to App</a>
       </div>
       <div class="footer-links">
         <strong>Contact</strong>
@@ -462,7 +462,7 @@
         <a href="contact.html">Contact</a>
       </nav>
       <div class="header-actions">
-        <a class="btn btn-primary app-cta" data-app-link href="login.html">Go to App</a>
+        <a class="btn btn-primary app-cta" data-app-link href="/app/login.html">Go to App</a>
         <button class="nav-toggle" type="button" aria-expanded="false" aria-controls="site-nav">Menu</button>
       </div>
     </div>
@@ -565,7 +565,7 @@
           </div>
           <div style="display:flex;gap:12px;flex-wrap:wrap;justify-content:flex-end;">
             <a class="btn btn-secondary" href="contact.html">Schedule a call</a>
-            <a class="btn btn-primary" data-app-link href="login.html">Go to App</a>
+            <a class="btn btn-primary" data-app-link href="/app/login.html">Go to App</a>
           </div>
         </div>
       </div>
@@ -591,7 +591,7 @@
         <strong>Company</strong>
         <a href="contact.html">Contact</a>
         <a href="contact.html">Request a demo</a>
-        <a data-app-link href="login.html">Go to App</a>
+        <a data-app-link href="/app/login.html">Go to App</a>
       </div>
       <div class="footer-links">
         <strong>Contact</strong>
@@ -633,7 +633,7 @@
         <a href="contact.html">Contact</a>
       </nav>
       <div class="header-actions">
-        <a class="btn btn-primary app-cta" data-app-link href="login.html">Go to App</a>
+        <a class="btn btn-primary app-cta" data-app-link href="/app/login.html">Go to App</a>
         <button class="nav-toggle" type="button" aria-expanded="false" aria-controls="site-nav">Menu</button>
       </div>
     </div>
@@ -718,7 +718,7 @@
           </div>
           <div style="display:flex;gap:12px;flex-wrap:wrap;justify-content:flex-end;">
             <a class="btn btn-secondary" href="contact.html">Talk to security</a>
-            <a class="btn btn-primary" data-app-link href="login.html">Go to App</a>
+            <a class="btn btn-primary" data-app-link href="/app/login.html">Go to App</a>
           </div>
         </div>
       </div>
@@ -744,7 +744,7 @@
         <strong>Company</strong>
         <a href="contact.html">Contact</a>
         <a href="contact.html">Request a demo</a>
-        <a data-app-link href="login.html">Go to App</a>
+        <a data-app-link href="/app/login.html">Go to App</a>
       </div>
       <div class="footer-links">
         <strong>Contact</strong>
@@ -786,7 +786,7 @@
         <a class="active" href="contact.html">Contact</a>
       </nav>
       <div class="header-actions">
-        <a class="btn btn-primary app-cta" data-app-link href="login.html">Go to App</a>
+        <a class="btn btn-primary app-cta" data-app-link href="/app/login.html">Go to App</a>
         <button class="nav-toggle" type="button" aria-expanded="false" aria-controls="site-nav">Menu</button>
       </div>
     </div>
@@ -801,7 +801,7 @@
           <p>Tell us about your inventory setup and we will recommend the best plan, rollout, and integration path.</p>
           <div class="hero-actions">
             <a class="btn btn-primary" href="#contact-form">Request a demo</a>
-            <a class="btn btn-secondary" data-app-link href="login.html">Go to App</a>
+            <a class="btn btn-secondary" data-app-link href="/app/login.html">Go to App</a>
           </div>
         </div>
         <div class="hero-card fade-up delay-2">
@@ -865,7 +865,7 @@
           </div>
           <div style="display:flex;gap:12px;flex-wrap:wrap;justify-content:flex-end;">
             <a class="btn btn-secondary" href="features.html">View features</a>
-            <a class="btn btn-primary" data-app-link href="login.html">Go to App</a>
+            <a class="btn btn-primary" data-app-link href="/app/login.html">Go to App</a>
           </div>
         </div>
       </div>
@@ -891,7 +891,7 @@
         <strong>Company</strong>
         <a href="contact.html">Contact</a>
         <a href="contact.html">Request a demo</a>
-        <a data-app-link href="login.html">Go to App</a>
+        <a data-app-link href="/app/login.html">Go to App</a>
       </div>
       <div class="footer-links">
         <strong>Contact</strong>
